[B]0.1.0[/B]
- [NEW] Unwatched / new tvshow episode flag (thanks postdeath)

[B]0.9.5[/B]
- [MODIFIED] Various PVR tweaking
- [NEW] Music / video scan progress indicator (thanks zznh)
- [NEW] View current music playlist (accessible from options menu in music section)
- [MODIFIED] Music visualisation background reworked. Track progress indicator reinstated (thanks bigpen15crew)
- [NEW] Settings level indicator for Gotham builds
- Various tweaks and bugfixes

[B]0.9.0[/B]
- [NEW] Video bookmarks (videoOSDBookmarks.xml)
- [MODIFIED] Sidebar options menu reworked
- [MODIFIED] custom menu item selection / deletion system revised
- [MODIFIED] PVR views and dialogs.
- Numerous miscellaneous tweaks, fixes and general tidying up

[B]0.8.0[/B]
- [MODIFIED] Default background revised
- [MODIFIED] Addons view revised to grid-based layout (thanks LeviJay)
- [MODIFIED] DialogYesNo.xml button order reversed (thanks MoneyMaker)
- [NEW] File manager
- [NEW] Media Filter (video)
- [NEW] DialogPVRGuideSearch.xml
- [MODIFIED] Recent items (video / music) now uses skin widgets addon
- [MODIFIED] PVR menu integrated into main video menu
- [UPDATED] Preparation for Beta release: Strings localised and generally cleaned up
- [MODIFIED] Refresh library button moved to sidebar. Gotham and Frodo implementations tentatively supported (Thanks Yowls).
- [NEW] Cast and crew viewer added to video info
- [MODIFIED] Favourites browser tweaked
- [MODIFIED] Music player will continue playing even after music section is exited. Videos will continue to stop playback on return to video menu / homescreen (thanks LeviJay)
- [MODIFIED] Focus should now return to the titles listing rather than the source menu on end-of-playback. Some addons may be a bit flaky in this regard, I will monitor.
- Various skinwide tweaks

[B]0.7.0[/B]
- [NEW] Hide watched flag in video section (side menu toggle)
- [NEW] Global search (split across video and music)
- [NEW] Favourites browser
- [NEW] User profiles