@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window id="107">
-	<defaultcontrol always="true">402</defaultcontrol>
 	<allowoverlay>yes</allowoverlay>
 
 	<coordinates>
