@@ -511,7 +511,7 @@
 						<texturenofocus>colors/unselected.png</texturenofocus>
 						<textoffsetx>12</textoffsetx>
 						<label>137</label>
-						<onclick>RunScript(script.globalsearch,artists=true&albums=true)</onclick>
+						<onclick>RunScript(script.globalsearch,artists=true&amp;albums=true)</onclick>
 						<onclick>Skin.SetString(showRecentMusicItems,true)</onclick>
 					</control>
 
