@@ -2,7 +2,7 @@
 <window id="2">
 	<defaultcontrol always="true">9000</defaultcontrol>
 	<allowoverlay>yes</allowoverlay>
-	<onload>PlayerControl(stop)</onload>
+	<onload condition="!Player.HasAudio">PlayerControl(stop)</onload>
 
 	<controls>
 		
