@@ -1,4 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<window id="6">
-	<!--removed-->
-</window>
